
## [1.6.0] – 2026-01-22
### Added
- Status-Dropdown je Finding, damit pro Auswahl ein Status erfasst und gespeichert werden kann.

### Changed
- Bestellliste gruppiert Parts jetzt nach Status und Finding-Label, inklusive Ausgabe im Bestelltext.

## [1.5.8] – 2026-01-22
### Changed
- Kopierfunktion der Bestellliste schreibt die Menge jetzt in Spalte 5 und 6 der Bestellmatrix.

## [1.5.7] – 2026-01-19
### Fixed
- Mengeneinheiten in der Bestellliste werden nun immer mit Komma angezeigt und beim Kopieren ausgegeben, auch wenn die Quelle einen Punkt enthält.

## [1.5.6] – 2026-01-19
### Changed
- History-Dropdown wählt beim Laden automatisch das neueste Ereignis und zeigt einen roten Hinweis, wenn ein älteres Ereignis aktiv ist.

## [1.5.5] – 2026-01-19
### Changed
- Kopierfunktion der Bestellliste erstellt jetzt tabellenartige Zeilen mit Partnummer in Spalte 1 und Menge in Spalte 6.

## [1.5.4] – 2026-01-19
### Changed
- Event-History speichert nur noch die ausgewählten Finding-Labels statt aller Unterpunkte.
- Gespeicherte Ereignisse enthalten jetzt den Reason-for-Removal-Status sowie den Piloten-Reason-Text.

## [1.5.3] – 2026-01-19
### Added
- Event-Liste im Aktionsmenü zeigt beim Hover ein Löschsymbol, das ein Bestätigungsdialog für gespeicherte Ereignisse öffnet.

### Changed
- Eingeklappter Header nutzt ein klareres Rasterlayout für Meldung, Partnummer und Seriennummer.
- Aktuelles Findings-Ereignis aktualisiert sich automatisch, sobald eine neue Auswahl hinzugefügt oder entfernt wird.

## [1.5.2] – 2026-01-19
### Added
- History-Dropdown im Aktionsmenü speichert Findings-Ereignisse pro Part-/Seriennummer mit Zeitstempel und ermöglicht das Umschalten zwischen gespeicherten Events.
- History wird als eigene JSON-Datei im Root-Ordner geführt und bei Bedarf automatisch angelegt.
- „Findings auswählen“ enthält jetzt einen Plus-Button zum Speichern eines Ereignisses.
- History-Dropdown ist im eingeklappten Header verfügbar und zeigt Datumswerte im Format TT.MM.JJJJ.
